refactor: standardize string handling via app utils